--- a/core/templates/detail.html
+++ b/core/templates/detail.html
@@ -2,24 +2,24 @@
 
 {% block content %}
 <h1>{{ project.project_name }}</h1>
-{% if stop %}
+{% if project.active_timeentry_id > 0 %}
+<h1> CURRENTLY TIMING </h1>
+<form action="/core/{{ project.id }}/stoptiming/" method="post">
+  {% csrf_token %}
+  <input type="submit" value="Stop timing">
+</form>
+{% else %}
 <h1> ON HOLD </h1>
 <form action="/core/{{ project.id }}/timing/" method="post">
   {% csrf_token %}
   <input type="submit" value="Start timing">
 </form>
-{% else %}
-<h1> CURRENTLY TIMING </h1>
-<form action="/core/{{ project.id }}/{{ timeentry.id }}/stoptiming/" method="post">
-  {% csrf_token %}
-  <input type="submit" value="Stop timing">
-</form>
 {% endif %}
       <ul>
-        {% if latest_project_list %}
+        {% if latest_timeentries %}
           <ul>
             {% for timeentry in latest_timeentries %}
-              <li>{{ timeentry.start_time }}</li>
+              <li>{{ timeentry.start_time }} worked for {{ timeentry.delta_minutes }} minutes</li>
             {% endfor %}
           </ul>
         {% else %}
