--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -1,6 +1,14 @@
 {% extends "base_generic.html" %}
 
 {% block content %}
+<button onClick="alert('You clicked the button using Javascript.');">
+       Click Me - I run Javascript
+</button>
+
+<p>This is a example</p>
+
+<p>This is another example</p>
+
   <h1>List of projects:</h1>
     {% if latest_project_list %}
       <ul>
